# home_control

./: .gitignore  README.md  plant.ino
hub/: Cargo.toml  Dockerfile.prebuilt  config_example.toml
hub/google-smart-home/: Cargo.toml  build.rs
hub/google-smart-home/generator/: Cargo.toml
hub/google-smart-home/generator/src/: lib.rs  main.rs
hub/google-smart-home/src/: lib.rs
hub/samsung-smart-things/: Cargo.toml
hub/samsung-smart-things/src/: lib.rs  main.rs
hub/src/: local_home.rs  main.rs
hub/src/device/: mod.rs  plant_led.rs  samsung_air_conditioner.rs
hydra_front/: Cargo.toml  Dockerfile.prebuilt
hydra_front/.cargo/: config
hydra_front/src/: consent.html  login.html  main.rs
hydra_front/src/auth/: mod.rs  pam.rs  shadow.rs
plant_care/: plant_care.ino
plant_care/home_assistant/: __init__.py  config_flow.py  const.py  light.py  manifest.json  switch.py  water_pump.py
plant_led/: plant_led.ino
