[package]
name = "hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1"
axum = { version = "^0.5", features = ["json", "query"] }
chrono = "^0.4"
env_logger = "^0.9"
fallible-iterator = "^0.2"
futures = "^0.3"
log = "^0.4"
reqwest = { version = "^0.11", default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "^0.5"
tower-http = { version = "^0.3", features = ["trace"] }