[package]
name = "hydra_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
auth-pam = ["pam"]
auth-shadow = ["shadow", "pwhash"]

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1"
axum = { version = "^0.5", features = ["json", "query", "headers"] }
chrono = { version = "^0.4", features = ["serde"] }
env_logger = "^0.9"
fallible-iterator = "^0.2"
futures = "^0.3"
log = "^0.4"
reqwest = { version = "^0.11", default-features = false, features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "^0.3", features = ["trace"] }

[target.'cfg(unix)'.dependencies]
pam = { version = "^0.7", optional = true }
shadow = { version = "0.0.1", optional = true }
pwhash = { version = "^1", optional = true }