[package]
name = "google-smart-home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
generate = []

[dependencies]
log = "^0.4"
serde = { version = "^1", features = ["derive"] }
serde_with = "^1.13"
serde_json = "^1"

[build-dependencies]
anyhow = "^1.0"
generator = { path = "./generator" }
