[package]
name = "samsung-smart-things"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
once_cell = "^1.10"
thiserror = "^1.0"
reqwest = { version = "^0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_with = "^1.13"
serde_qs = "^0.9"
url = "^2.2"
# tokio = { version = "^1", features = ["macros", "rt-multi-thread", "signal"] }
# env_logger = "^0.9"